[package]
name = "wasm-bindgen-macro"
version = "0.2.62"
authors = ["The wasm-bindgen Developers"]
license = "MIT/Apache-2.0"
repository = "https://github.com/rustwasm/wasm-bindgen/tree/master/crates/macro"
homepage = "https://rustwasm.github.io/wasm-bindgen/"
documentation = "https://docs.rs/wasm-bindgen"
description = """
Definition of the `#[wasm_bindgen]` attribute, an internal dependency
"""
edition = "2018"

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
watt = "0.3"

[dev-dependencies]
trybuild = "1.0"
wasm-bindgen = { path = "../..", version = "0.2.62", features = [] }
wasm-bindgen-futures = { path = "../futures", version = "0.4.12" }
